# bibliostratus

./: .gitignore  INSTALL.md  LICENSE  README.md  ark2records.py  ark2records_autonomous.py  aut2id_concepts.py  build_executable.py  index.html  index.md  main.py  marc2tables.py  noticesaut2arkBnF.py  noticesbib2arkBnF.py  noticesbib2arkBnF_imbrication_fonctions.py  pyproject.toml  requirements.txt  setup_transbiblio.py  test_grecMarc.py  xml2iso2709_test.py
bibliostratus/: .style.yapf  1mon  1per.tsv  30000 alignements - temps de traitement  __init__.py  ark2records.py  aut2id.py  aut2id_concepts.py  aut2id_idref.py  aut_align_idref.py  bib2id.py  bib2id_gmb.py  bibliostratus-cli-test.py  bibliostratus-cli.py  bibliostratus.bat  bibliostratus_sudoc_sru.ods  class_select_directory.py  cli.py  csv_converter.py  csv_example.tsv  edit_preferences.py  encoding_5426_test.py  forms.py  funcs.py  gmb_monimpr-bibliostratus.tsv  gmb_monimpr.tsv  kbbgabrrjf  last_compilations.json  launch_pyinstaller_win32.bat  launch_pyinstaller_win64.bat  main.py  main.spec.svg202509  main_argv.py  mapping_number_letters.py  marc2tables.py  marc2tables_marc21.py  noticesaut2arkBnF.py  noticesbib2arkBnF.py  noticesbib2arkBnF_imbrication_fonctions.py  pb_unidecode.py  (+11 more)
doc/: BiblioStratus - documentation technique.docx  Controles_editeurs_(test_1-35).xlsx  readme.md  specifications_alignements-donnees-bnf.docx  specifications_alignements-donnees-bnf_V1_1.docx  ~$bliostratus - documentation technique.docx  ~$ecifications_alignements-donnees-bnf.docx  ~WRL0003.tmp  ~WRL2651.tmp
examples/: adv.tsv  aut_align_bib.tsv  listeARKaut.tsv  listeARKbib.tsv  mon_impr.tsv  noticesbib.iso  per.tsv
img/: module_blanc_paratexte.pdn  processus_transbiblio.odg
noticesbib2arkBnF/: main.py  marc2tables.py  noticesbib2arkBnF.py
source/: ark2records.py  arks_9990.tsv  download_file_button.py  funcs.py  last_compilations.json  main.py  (+21 more)
(+24 files in other folders)
